--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <html>
 <head>
-  <title>Start</title>
+  <title>Food Tracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="build/js/vendor.min.js"></script>
   <link rel="stylesheet" href="build/css/vendor.css">
